# esp32-rover-car

./: CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  led.c  led.h  main.c  motor.c  motor.h  wifi_ap.c  wifi_ap.h
main/display/: car_ui.c  car_ui.h
main/net/: captive_dns.c  captive_dns.h  http_server.c  http_server.h  index.html  wifi_ap.c  wifi_ap.h
