idf_component_register(
    SRCS
        "main.c"
        "motor.c"
        "led.c"
        "net/wifi_ap.c"
        "net/captive_dns.c"
        "net/http_server.c"
        "display/car_ui.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        driver
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_lcd
        json
        led_strip
        nvs_flash
        lwip
    EMBED_FILES
        "net/index.html"
)
